--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 
 </head>
 
@@ -29,7 +30,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li style="margin: 10px 20vw 0"><p>
+              <li id='gameRules'><p>
                     <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                       Game Rules
                     </a>
@@ -65,10 +66,11 @@
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
       </nav>
-
+<!-- END OF NAVICAGION-->
+<!-- START OF HEADER/SIDE CARD STARTS HERE-->
 
       <!--bar for balance, wager, and time to flip-->
-      <div class="container" >
+      <div id='wagerBar' class="container" >
             
             <div class="row">
                 <div class="col-sm-4">Balance: <span id='balance'></span></div>
@@ -76,8 +78,17 @@
                 <div class="col-sm-2">Time To Flip: <span id='flipTimer'></span></div>
             </div>
         </div>
-<!-- END OF NAVICAGION-->
-<!-- START OF HEADER/SIDE CARD STARTS HERE-->
+
+        <div class="container" >
+            
+                <div class="row">
+                    <div class="col-sm-4"><div id='chatbox'>hello</div></div>
+                    <div class="col-sm-2"><img src="https://images.alphacoders.com/882/882298.jpg" id='heads'></div>
+                    <div class="col-sm-4"><div id='gameBox'></div></div>
+                    <div class="col-sm-2"><img src='https://wallpapercave.com/wp/a86CfEx.jpg' id='tails'></div>
+                </div>
+            </div>
+
 
 
 
