--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+<link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto+Slab|Slabo+27px" rel="stylesheet">
 
 </head>
 
@@ -82,7 +83,7 @@
         <div class="container" >
             
                 <div class="row">
-                    <div class="col-sm-4"><div id='chatbox'>hello</div></div>
+                    <div class="col-sm-4"><div id='chatbox'>Chat Box</div></div>
                     <div class="col-sm-2"><img src="https://images.alphacoders.com/882/882298.jpg" id='heads'></div>
                     <div class="col-sm-4"><div id='gameBox'></div></div>
                     <div class="col-sm-2"><img src='https://wallpapercave.com/wp/a86CfEx.jpg' id='tails'></div>
