--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-sm-4"><div id='chatbox'>Chat Box</div></div>
                     <div class="col-sm-2"><img src="https://images.alphacoders.com/882/882298.jpg" id='heads'></div>
-                    <div class="col-sm-4"><div id='gameBox'></div></div>
+                    <div class="col-sm-4"><div id='gameBox'>Game Box</div></div>
                     <div class="col-sm-2"><img src='https://wallpapercave.com/wp/a86CfEx.jpg' id='tails'></div>
                 </div>
             </div>
