added background, added a bit of padding and margins

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 <body>
+  <div id='background-color-div'>
     <nav class="navbar navbar-default">
         <div class="container-fluid">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -96,7 +97,7 @@
 
 
 
-
+</div>
 </body>
 <!-- jQuery, javascript file for the Bootstrap's javascript file to function -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
