--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Site Name</a>
+            <a class="navbar-brand" href="https://youtu.be/_XWomD6TazQ?t=11s">Coin Flip</a>
           </div>
       
           <!-- Collect the nav links, forms, and other content for toggling -->
