--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
                     <div class="col-sm-2"><img src='https://wallpapercave.com/wp/a86CfEx.jpg' id='tails'></div>
                 </div>
             </div>
+            <div class='row'>
+                <div class="col-sm-4"></div>
+
+              <div class="col-sm-4"><div id='historyBox'>History</div></div>
+              <div class="col-sm-4"></div>
+
+
+            </div>
 
 
 
